--- a/templates/page/_comment-form.html.twig
+++ b/templates/page/_comment-form.html.twig
@@ -2,7 +2,7 @@
     <p>
         Comentar como <strong>{{ app.user.name }}</strong>
     </p>
-    {{ form(form) }}
+    {{ form(form, { 'action': path('app_comment_new', { slug: post.slug }) }) }}
 {% else %}
     <p>
         <a href="{{ path('app_login') }}">Iniciar sesión</a> para comentar
