--- a/templates/page/_comment-form.html.twig
+++ b/templates/page/_comment-form.html.twig
@@ -1,10 +1,14 @@
-{% if app.user %}
-    <p>
-        Comentar como <strong>{{ app.user.name }}</strong>
-    </p>
-    {{ form(form, { 'action': path('app_comment_new', { slug: post.slug }) }) }}
-{% else %}
-    <p>
-        <a href="{{ path('app_login') }}">Iniciar sesión</a> para comentar
-    </p>
-{% endif %}
+<div class="bg-light p-4">
+
+    {% if app.user %}
+        <p>
+            Comentar como <strong>{{ app.user.name }}</strong>
+        </p>
+        {{ form(form, { 'action': path('app_comment_new', { slug: post.slug }) }) }}
+    {% else %}
+        <p>
+            <a href="{{ path('app_login') }}">Iniciar sesión</a> para comentar
+        </p>
+    {% endif %}
+
+</div>
